--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,10 +2,38 @@ body {
   background: black;
   text-align: center;
   font-family: verdana;
+  color: white;
 }
 
 h1 {
   font-weight: normal;
   font-size: 50px;
-  color: white;
+}
+
+h2 {
+  font-weight: 300;
+  font-size: 42px;
+}
+
+p, footer {
+  font-size: 21px;
+  color: gray;
+}
+
+a {
+  color: aquamarine;
+  font-size: 16px;
+}
+div.video {
+  padding-top: 15px;
+}
+
+div.icon {
+  padding-top: 15px;
+}
+
+footer {
+  text-align: right;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
